Implement: Feature 6 & Feature 7

--- a/src/Data/history.txt
+++ b/src/Data/history.txt
@@ -1,9 +1,30 @@
-:D
-:3
 :>
 OWO
-:>
-:>
-:3
 owo
 OWO
+:3
+:s
+:>
+:<
+:>
+:3
+OWO
+owo
+OwO
+:3
+owo\
+OwO
+:>
+:a
+:2
+:O
+:3
+A
+B
+VCA
+VC
+VC
+OWO
+:>
+:3
+:3
