--- a/data/history.txt
+++ b/data/history.txt
@@ -1,30 +1,3 @@
-PLI
-PLI
-ken
-KEN
-PITCH
-PLI
-ABU
-FSOT
-FSOT
-FSOT
-FSOT
-FSOT
-FSOT
-HOOROO
-KLM
-FSOT
-YO
-EOW
-EOW
-:3
-:>
-EOW
-:3
-:>
-:]
-]:<
-[:<
->:)
->:(
-NY
+EQE
+EQE
+EQE
